web-infras/parser/tests/fixtures/babel/core/categorized/invalid-fn-decl-labeled-inside-if/output.txt
[SyntaxError]: In non-strict mode code, functions can only be declared at top level, inside a block, or as the body of an if statement. (1,8)
1|if (1) foo: bar: function foo(){}
 |      ^
